fix margin on mobiles

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,7 @@ html::after {
   display: block;
   font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 1.5rem;
-  padding: 0 1.5rem;
+  margin: 1.5rem;
 }
 .title {
   color: var(--header1);
